fixed a bug where the town would be too small after returning from a structure view

--- a/src/components/App/styles/app.scss
+++ b/src/components/App/styles/app.scss
@@ -21,6 +21,8 @@
 
   cursor: var(--app-cursor-default);
   font-family: $font-normal;
+  display: flex;
+  flex-direction: column;
 
   button {
     cursor: var(--app-cursor-pointer);
